--- a/FitlyApp/Sobre-o-projeto/css/sobreProjeto.css
+++ b/FitlyApp/Sobre-o-projeto/css/sobreProjeto.css
@@ -94,11 +94,12 @@ Banner
 }
 
 .colaboradores > ul > li {
-  background-color: #fff;
+  background-color: #ffffff;
   border-radius: 1.4vw;
-  border: 1px solid #fff;
+  border: 1px solid #ffffff;
   box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.25);
   padding: 1.4vw 2vw;
+
 }
 
 .colaboradores .unico {
@@ -115,6 +116,7 @@ Banner
   padding: 2vw 4vw;
   border-radius: 2vw;
   box-shadow: 1px 1px 8px rgba(0, 0 ,0, 0.25);
+  width: 40vw;
 }
 
 
@@ -149,7 +151,7 @@ Banner
   margin: 3vw auto 0 auto;
 }
 
-.colaboradores .colab .dupla li p:first-child {
+.colaboradores .colab .dupla li p {
   margin: 2rem 1rem;
 }
 
@@ -192,6 +194,9 @@ Banner
     align-items: center;
     margin: 3rem auto;
     width: 100%;
+  }
+  .colaboradores .unico .unit {
+    width: 100vw;
   }
   .colaboradores .h2 {
   box-sizing: border-box; 
