--- a/FitlyApp/Formulario/css/style.css
+++ b/FitlyApp/Formulario/css/style.css
@@ -320,7 +320,9 @@ p.aviso {
 .pag1 {
   display: none;
 } */
-
+section.secaoOCulta {
+  display: none;
+}
 
 @media screen and (max-width: 768px) {
 
