--- a/FitlyApp/Base/style.css
+++ b/FitlyApp/Base/style.css
@@ -325,7 +325,7 @@ NotFound (404)
         justify-content: center;
     }
     .plataforma h4 {
-        margin-bottom: vh;
+        margin-bottom: 0vh;
     }
     .plataforma ul li p {
         font-size: 0.9rem;
