--- a/FitlyApp/Base/style.css
+++ b/FitlyApp/Base/style.css
@@ -3,26 +3,25 @@ HTML
 ************************************************/
 
 :root {
-    --color-background: #f7f7f7;
-    --color-text: #000000;
+  --color-background: rgba(rgba(255, 255, 255, 0.8));
+  --color-text: #000000;
 }
 
-main>p,
+main > p,
 strong,
 h4,
 h2,
 h3,
 a {
-    color: var(--color-text);
+  color: var(--color-text);
 }
 
 li {
-    color: var(--color-background);
-
+  color: var(--color-background);
 }
 
 body {
-    background-color: var(--color-background);
+  background-color: var(--color-background);
 }
 
 /************************************************
@@ -30,63 +29,63 @@ Início
 ************************************************/
 
 .randIMG {
-    position: relative;
-    height: auto;
-    background-color: #000000;
+  position: relative;
+  height: auto;
+  background-color: #000000;
 }
 
 .randIMG img {
-    object-fit: cover;
-    display: block;
-    width: 100%;
-    height: 1010px;
-    opacity: 0.3;
-    background-color: #000000;
+  object-fit: cover;
+  display: block;
+  width: 100%;
+  height: 1010px;
+  opacity: 0.3;
+  background-color: #000000;
 }
 
 .inicio {
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90%;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
 }
 
 .inicio {
-    text-align: center;
+  text-align: center;
 }
 
 .inicio h1 {
-    margin: 30px 0px 30px 0px;
-    color: #FFFFFF;
-    font-size: 2.5rem;
-    font-weight: bold;
+  margin: 30px 0px 30px 0px;
+  color: #ffffff;
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
 .inicio p {
-    color: #FFFFFF;
-    margin: 30px 0px 30px 0px;
-    font-size: 1rem;
+  color: #ffffff;
+  margin: 30px 0px 30px 0px;
+  font-size: 1rem;
 }
 
 .inicio a {
-    background-color: #30AFFF;
-    display: inline-block;
-    margin: 30px 0px 30px 0px;
-    padding: 12px 25px;
-    border-radius: 8px;
-    font-size: 0.9rem;
-    text-decoration: none;
-    font-weight: bold;
-    color: #FFFFFF;
-    transition: all 0.3s ease;
-    border: 2px solid transparent;
+  background-color: #30afff;
+  display: inline-block;
+  margin: 30px 0px 30px 0px;
+  padding: 12px 25px;
+  border-radius: 8px;
+  font-size: 0.9rem;
+  text-decoration: none;
+  font-weight: bold;
+  color: #ffffff;
+  transition: all 0.3s ease;
+  border: 2px solid transparent;
 }
 
 .inicio a:hover {
-    background-color: #009DFF;
-    transform: translateY(-2px);
+  background-color: #009dff;
+  transform: translateY(-2px);
 }
 
 /************************************************
@@ -116,52 +115,49 @@ plataforma
 } */
 
 .plataforma {
-    margin: 8rem;
-    margin-top: 4rem;
-    margin-bottom: 4rem;
+  margin: 8rem;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
 }
 
 .plataforma ul {
-    list-style: none;
+  list-style: none;
 }
 
 .plataforma p {
-    font-size: .8rem;
-    text-align: left;
-    margin: 0.8rem;
-    margin-right: 20rem;
+  font-size: 0.8rem;
+  text-align: left;
+  margin: 0.8rem;
+  margin-right: 20rem;
 }
-
 
 .plataforma h3 {
-    font-size: 1.3rem;
-    text-align: left;
-    margin: 0.5rem 0rem 0.5rem 0rem;
+  font-size: 1.3rem;
+  text-align: left;
+  margin: 0.5rem 0rem 0.5rem 0rem;
 }
 
-.plataforma i {
-    color: #009DFF;
+.plataforma span {
+  color: #009dff;
 }
-
-
 
 .plataforma h4 {
-    font-size: 1.1rem;
-    text-align: left;
-    font-weight: normal;
-    margin: 0.5rem 0rem 0.5rem 0rem;
+  font-size: 1.1rem;
+  text-align: left;
+  font-weight: normal;
+  margin: 0.5rem 0rem 0.5rem 0rem;
 }
 
 .plataforma h2 {
-    font-size: 1.5rem;
-    text-align: left;
-    margin: 1.6rem 0rem 0.8rem 0rem;
+  font-size: 1.5rem;
+  text-align: left;
+  margin: 1.6rem 0rem 0.8rem 0rem;
 }
 
 .plataforma img {
-    float: right;
-    margin-left: 2rem;
-    max-height: 900px;
+  float: right;
+  margin-left: 2rem;
+  max-height: 900px;
 }
 
 /************************************************
@@ -169,32 +165,32 @@ Depoimentos
 ************************************************/
 
 .depoimentos h2 {
-    font-size: 2rem;
-    text-align: center;
-    margin: 0.5rem 0rem 0.5rem 0rem;
+  font-size: 2rem;
+  text-align: center;
+  margin: 0.5rem 0rem 0.5rem 0rem;
 }
 
 .depoimentos ul {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    flex-wrap: wrap;
-    color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  flex-wrap: wrap;
+  color: #ffffff;
 }
 
 .depoimentos ul li {
-    padding: 20px;
-    margin: 20px 20px 20px 20px;
-    border-radius: 12px;
-    align-items: center;
-    border-color: #30AFFF;
-    background-color: rgba(0, 157, 255, 0.8);
-    backdrop-filter: blur(2px);
-    transition: all 0.3s ease;
-    border: 2px solid transparent;
-    text-decoration: none;
-    list-style: none;
-    max-width: 250px;
+  padding: 20px;
+  margin: 20px 20px 20px 20px;
+  border-radius: 12px;
+  align-items: center;
+  border-color: #30afff;
+  background-color: rgba(0, 157, 255, 0.8);
+  backdrop-filter: blur(2px);
+  transition: all 0.3s ease;
+  border: 2px solid transparent;
+  text-decoration: none;
+  list-style: none;
+  max-width: 250px;
 }
 
 /************************************************
@@ -202,139 +198,124 @@ CTA
 ************************************************/
 
 .CTA {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 500px;
-    overflow: hidden;
-}
-
-.CTA img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.6;
-    background-color: #000000;
-    z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  color: var(--color-background);
+  background-image: url(/FitlyApp/Imagens/img_pag-inicial/geike-verniers-UXVH8QPBlIQ-unsplash.jpg);
+  background-position: center;
+  background-size: cover;
 }
 
 .CTA h2 {
-    color: #fcfcfc;
-    font-size: 2rem;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 2rem;
-    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
-    z-index: 2;
+  color: #fcfcfc;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 2rem;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
+  z-index: 2;
 }
 
 .CTA a {
-    background-color: #30AFFF;
-    padding: 12px 25px;
-    border-radius: 10px;
-    font-size: 1.1rem;
-    text-decoration: none;
-    font-weight: bold;
-    color: #FFFFFF;
-    transition: all 0.3s ease;
-    border: 2px solid transparent;
-    z-index: 3;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  background-color: #30afff;
+  padding: 12px 25px;
+  border-radius: 10px;
+  font-size: 1.1rem;
+  text-decoration: none;
+  font-weight: bold;
+  color: #ffffff;
+  transition: all 0.3s ease;
+  border: 2px solid transparent;
+  z-index: 3;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .CTA a:hover {
-    background-color: #009DFF;
-    transform: translateY(-3px) scale(1.02);
-    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+  background-color: #009dff;
+  transform: translateY(-3px) scale(1.02);
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
 }
-
-
 
 /************************************************
 NotFound (404)
 ************************************************/
 
 .NotFound {
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90%;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
 }
 
-
 .NotFound h1 {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 
 .NotFound h2 {
-    font-weight: normal;
+  font-weight: normal;
 }
 
 .NotFound a {
-    background-color: #30AFFF;
-    display: inline-block;
-    margin: 30px 0px 30px 0px;
-    padding: 10px 50px;
-    border-radius: 8px;
-    font-size: 0.9rem;
-    text-decoration: none;
-    font-weight: bold;
-    color: #FFFFFF;
-    transition: all 0.3s ease;
-    border: 2px solid transparent;
+  background-color: #30afff;
+  display: inline-block;
+  margin: 30px 0px 30px 0px;
+  padding: 10px 50px;
+  border-radius: 8px;
+  font-size: 0.9rem;
+  text-decoration: none;
+  font-weight: bold;
+  color: #ffffff;
+  transition: all 0.3s ease;
+  border: 2px solid transparent;
 }
 
 .NotFound a:hover {
-    background-color: #009DFF;
-    transform: translateY(-2px);
+  background-color: #009dff;
+  transform: translateY(-2px);
 }
 
 /************************************************/
 /* Responsividade */
 
 @media only screen and (max-width: 768px) {
+  .plataforma img {
+    float: none;
+    display: block;
+    margin: 2rem auto;
+    max-height: 600px;
+    width: auto;
+  }
 
-    .plataforma img {
-        float: none;
-        display: block;
-        margin: 2rem auto;
-        max-height: 600px;
-        width: auto;
-    }
+  .plataforma {
+    margin: 0;
+  }
 
-    .plataforma {
-        margin: 0;
-    }
+  .plataforma p,
+  .plataforma h2,
+  .plataforma h3,
+  .plataforma h4 {
+    margin: 1rem 1.5rem 1rem 1.5rem;
+  }
 
-    .plataforma p,
-    .plataforma h2,
-    .plataforma h3,
-    .plataforma h4 {
-        margin: 1rem 1.5rem 1rem 1.5rem;
-    }
-
-    .plataforma h4 {
-        text-align: justify;
-        justify-content: center;
-    }
-    .plataforma h4 {
-        margin-bottom: 0vh;
-    }
-    .plataforma ul li p {
-        font-size: 0.9rem;
-    }
-    .plataforma ul li h3 {
-        font-size: 1.2rem;
-    }
-    .CTA h2 {
-        font-size: 1.5rem;
-    }
-
+  .plataforma h4 {
+    text-align: justify;
+    justify-content: center;
+  }
+  .plataforma h4 {
+    margin-bottom: 0vh;
+  }
+  .plataforma ul li p {
+    font-size: 0.9rem;
+  }
+  .plataforma ul li h3 {
+    font-size: 1.2rem;
+  }
+  .CTA h2 {
+    font-size: 1.5rem;
+  }
 }
