Modo escuro feito na pág refe

--- a/FitlyApp/Referencias/css/Referencias.css
+++ b/FitlyApp/Referencias/css/Referencias.css
@@ -5,10 +5,11 @@ Formatação
 section {
   text-align: center;
 }
-
+section.main ul {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+}
 section ul li {
-  box-sizing: border-box;
-  width: 45%;
   height: auto;
   padding: 1vw 0vw 2vw 1vw;
   margin: 1rem;
@@ -18,11 +19,10 @@ section ul li {
   text-align: left;
 }
 
-section h1 {
+section h1#titulo {
   text-align: center;
   font-size: 3vw;
   padding: 2vw 0 0 0;
-  color: #000000;
   display: inline-block;
   border-bottom: 3px solid #009dff;
 }
@@ -38,7 +38,6 @@ section ul li h2 img {
   height: 1.8vw;
   margin: 0 1.2vw 0 0;
 }
-
 section ul li p {
   padding: 0 1rem;
 }
@@ -60,24 +59,6 @@ section ul li p a:hover {
 }
 
 /* === Formatacao === */
-section ul {
-  display: flex;
-  gap: 0.6rem;
-  justify-content: center;
-}
-
-section ul li {
-  display: block;
-}
-
-section ul li p {
-  margin: 4px 4px;
-  display: inline-block;
-}
-
-section ul li {
-  display: block;
-}
 
 /************************************************/
 /* Responsividade */
