--- a/FitlyApp/Base/base.css
+++ b/FitlyApp/Base/base.css
@@ -38,7 +38,6 @@ ul li {
   --color-text: #000000;
 }
 
-
 /************************************************
 Collors
 ************************************************/
@@ -52,7 +51,6 @@ a {
 
 li {
   color: var(--color-background);
-
 }
 
 body {
@@ -62,24 +60,34 @@ body {
 header
 ************************************************/
 header {
-  object-fit: cover;
   position: sticky;
   top: 0;
   padding: 0.5rem 3rem 0.5rem 3rem;
   background-color: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(2px);
   z-index: 10;
+  height: 65px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 60px;
 }
 
-header .logo a {
+header div {
+  display: flex;
+  align-items: center;
+}
+
+header .nav-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+header .logo h1 {
   font-size: 1.5rem;
   color: #000000;
   font-weight: bold;
-  float: left;
 }
 
 header .logo {
@@ -91,16 +99,16 @@ header .logo img {
   height: 2rem;
 }
 
-header nav ul {
+header .nav-menu ul {
   display: flex;
   align-items: center;
 }
 
-header nav ul li {
+header .nav-menu ul li {
   margin: 0 10px;
 }
 
-header nav ul li a {
+header .nav-menu ul li a {
   font-size: 0.8rem;
   color: #000000;
   text-decoration: none;
@@ -110,14 +118,14 @@ header nav ul li a {
   transition: all 0.3s ease;
 }
 
-header nav ul li a.contato {
+header .nav-menu ul li a.contato {
   border: 0.1rem solid #009dff;
   padding: 0.2rem 0.4rem;
 }
 
-header nav ul li a:hover {
+header .nav-menu ul li a:hover {
   background-color: #009dff;
-  color: #0d1b2a;
+  color: var(--color-background);
 }
 
 .hamburger {
@@ -134,20 +142,13 @@ header nav ul li a:hover {
   transition: all 0.3s ease-in-out;
   background-color: #333;
 }
-/*=========================================
-TEMA CLARO E TEMA ESCURO, PEQUENO CSS PARA ESTILIZAR OS BOTÕES
-============================================*/
-
-header nav {
-  display: flex;
-}
 
 header nav button {
   font-size: 1.5rem;
-  align-items: center;
   background-color: transparent;
   border: 0;
-  margin: 0 1.5rem;
+  margin-left: 1.5rem;
+  cursor: pointer;
 }
 
 header nav button:hover {
@@ -168,20 +169,41 @@ header nav ul li {
   margin: 10px;
   display: inline;
 }
-/************************************************
-MOBILE RESPONSIVE MENU
-************************************************/
+
 @media (max-width: 1024px) {
-  .hamburger {
-    display: block;
+  header {
+    padding: 0 1.5rem 0 1.5rem;
   }
 
-  .nav-menu {
+  header h1 a {
+    color: #000000 !important;
+  }
+
+  header .nav-menu {
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  header .nav-menu ul {
+    display: none;
+  }
+
+  header .nav-menu ul button {
+    margin: 0 1rem;
+  }
+
+  .hamburger {
+    display: block;
+    margin-left: 1rem;
+  }
+
+  header .nav-menu ul {
+    display: flex;
     position: fixed;
     top: -250px;
     left: 0;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.95);
     flex-direction: column;
     text-align: center;
     padding: 1rem 0;
@@ -189,20 +211,26 @@ MOBILE RESPONSIVE MENU
     pointer-events: none;
     transform: translateY(-20px);
     transition: top 0.35s ease, opacity 0.35s ease, transform 0.35s ease;
+    z-index: 9;
   }
 
-  .nav-menu.active {
+  .nav-menu.active ul {
+    display: flex;
     top: 60px;
     opacity: 1;
     transform: translateY(0);
     pointer-events: auto;
   }
 
-  .nav-menu ul {
-    flex-direction: column;
+  .nav-menu ul li {
+    margin: 2rem 0;
   }
 
-  .nav-menu ul li {
+  header .nav-menu ul li {
+    margin: 10px 0;
+  }
+
+  .nav-menu ul button {
     margin: 1rem 0;
   }
 }
@@ -211,7 +239,7 @@ MOBILE RESPONSIVE MENU
 footer
 ************************************************/
 footer {
-    background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 footer div {
   display: flex;
@@ -302,7 +330,7 @@ footer a {
     margin: 3vw;
   }
   footer div.direitos {
-    padding:  0 0 3vw 0;
+    padding: 0 0 3vw 0;
     margin: 0;
   }
   footer div div h2 {
